🔒 Update Alls Data In FrondEnd Prodect

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -10,5 +10,5 @@
     "strict": false,
     "noImplicitAny": false
   },
-  "include": ["src/**/*"]
+  "include": ["src/**/*", "src/FrontEnd/Profile/.jsx"]
 }
